--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Kind.ly</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="TvCharities">Charities</string>
+    <string name="TvCharity_name">Charity Name</string>
+    <string name="TvCharity_description">Charity Description.</string>
 </resources>
