--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,8 @@
     <string name="PostsTv">Posts</string>
     <string name="NameCharTv">Name of the Charity</string>
     <string name="TvAvailable_charities">Available charities</string>
+    <string name="UpdatePostBtn">Update Post</string>
+    <string name="DeletePostBtn">Delete</string>
+    <string name="UpdatePostTv">Update Post</string>
 
 </resources>
