--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,12 @@
     <string name="UpdatePostBtn">Update Post</string>
     <string name="DeletePostBtn">Delete</string>
     <string name="UpdatePostTv">Update Post</string>
+    <string name="hintCredict_card_number">Credict Card Number</string>
+    <string name="hintCvv">CVV</string>
+    <string name="Tvadd_payment_method">Add Payment Method</string>
+    <string name="Tvcard_no">card no</string>
+    <string name="Tvcvv">CVV</string>
+    <string name="Btnmy_payment_methods">My Payment Methods</string>
 
 
 </resources>
