--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,7 +57,7 @@
     <string name="btnTextResetPassword">Reset Password</string>
     <string name="btnDonationHistory">My Donation History</string>
     <string name="btnTextLogout">Logout</string>
-
+    <string name="Tvchoose_a_payment_method">Choose a payment method</string>
 
 
 </resources>
