--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,7 +63,7 @@
     <string name="feedImg">Feed Img</string>
     <string name="logoImg">Logo Img</string>
     <string name="tvRequestFootNote">Our team will respond to you as soon as possible.</string>
-
+    <string name="hintCreditCardNo">Credit Card Number</string>
 
 
 </resources>
