--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="logoImg">Logo Img</string>
     <string name="tvRequestFootNote">Our team will respond to you as soon as possible.</string>
     <string name="hintCreditCardNo">Credit Card Number</string>
+    <string name="TopicPostTv">Post Topic</string>
 
 
 </resources>
