--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="tvRequestFootNote">Our team will respond to you as soon as possible.</string>
     <string name="hintCreditCardNo">Credit Card Number</string>
     <string name="TopicPostTv">Post Topic</string>
+    <string name="PickImageBtn">"Pick an Image "</string>
 
 
 </resources>
