--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,7 @@
     <string name="tvRequestFootNote">Our team will respond to you as soon as possible.</string>
     <string name="hintCreditCardNo">Credit Card Number</string>
     <string name="tvRecentDonations">Recent Donations</string>
+    <string name="tvAvailableCharities">Available Charities</string>
 
 
 </resources>
