--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,9 @@
 
     <string name="tvRecentDonations">Recent Donations</string>
     <string name="tvAvailableCharities">Available Charities</string>
-
+    <string name="tvColDate">Date</string>
+    <string name="tvColCharity">Charity</string>
+    <string name="tvColAmount">Amount</string>
 
 
 </resources>
