Feed & Charity 1.6(Update)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@
     <string name="TopicPostTv">Post Topic</string>
     <string name="PickImageBtn">"Pick an Image "</string>
     <string name="tvRecentDonations">Recent Donations</string>
+    <string name="AddedPostsTv">Added Posts</string>
 
 
 </resources>
