--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,8 @@
     <string name="tvWelcomAdmin">Welcome Admin</string>
     <string name="tvLabelCardNo">Card Number</string>
     <string name="tvLabelExp">Expire Date</string>
+    <string name="tvChat">Global Chat</string>
+    <string name="tvChatWarning">Don\'t share any personal information here.</string>
 
 
 </resources>
